--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Creepster&family=Fira+Sans+Extra+Condensed:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Start pack</title>
+    <title>CSS Bayan</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                     <input class="item-input" type="checkbox" id="acc-2">
                     <label class="item-trigger" for="acc-2">Keep calm and carry on</label>
                     <div class="item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <img src="img/mems/01.PNG" width="200" height="" alt="200">
                     </div>
                     <div class="cursor">
                         <img src="img/plus-g.png" width="20" height="20" alt="">
@@ -47,7 +47,7 @@
                     <input class="item-input" type="checkbox" id="acc-3">
                     <label class="item-trigger" for="acc-3">Work-life balance</label>
                     <div class="item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <img src="img/mems/01.PNG" width="200" height="" alt="200">
                     </div>
                     <div class="cursor">
                         <img src="img/plus-g.png" width="20" height="20" alt="">
@@ -57,7 +57,7 @@
                     <input class="item-input" type="checkbox" id="acc-4">
                     <label class="item-trigger" for="acc-4">Dude, where is JS?</label>
                     <div class="item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <img src="img/mems/01.PNG" width="200" height="" alt="200">
                     </div>
                     <div class="cursor">
                         <img src="img/plus-g.png" width="20" height="20" alt="">
@@ -67,7 +67,7 @@
                     <input class="item-input" type="checkbox" id="acc-5">
                     <label class="item-trigger" for="acc-5">Relax and take it easy</label>
                     <div class="item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <img src="img/mems/01.PNG" width="200" height="" alt="200">
                     </div>
                     <div class="cursor">
                         <img src="img/plus-g.png" width="20" height="20" alt="">
